ingress/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: viggio-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: viggio-issuer
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '16k'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '16'
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      client_body_timeout                     600;
spec:
  rules:
  - host: viggio.com.br
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
      - backend:
          serviceName: api-backend
          servicePort: 80
        path: /api
  tls:
  - hosts:
    - viggio.com.br
    - www.viggio.com.br
    secretName: viggio-certificate-secret
